# Valorant-stratagy-overlay

./: .env.example  .gitignore  README.md  download_models.ps1  download_models.sh  index.html  package-lock.json  package.json  uninstall.bat  uninstall.sh  vite.config.js
.github/workflows/: build.yml
electron/: main.js  ocrParser.js  postMatchAnalysis.js  preload.js  strategyEngine.js  utils.js
src/: App.jsx  main.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  calibration.rs  capture.rs  computer_vision.rs  main.rs  ocr.rs  post_match.rs  prediction.rs  preprocessing.rs  state.rs  strategy.rs
src-tauri/src-tauri/: tauri.conf.json
src-tauri/src/audio/: mod.rs
src-tauri/src/calibration/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/computer_vision/: mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/post_match/: mod.rs
src-tauri/src/prediction/: mod.rs
src-tauri/src/preprocessing/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/strategy/: mod.rs
src/components/: AbilityCooldownOverlay.jsx  BuyRecommendations.jsx  CalibrationTool.jsx  ControlPanel.jsx  EconomyAdvisor.jsx  FPSMonitor.jsx  Overlay.jsx  PerRoundStats.jsx  PostMatchSummary.jsx  RoundTimer.jsx  SettingsPanel.jsx  StrategyTips.jsx  WinProbability.jsx
src/contexts/: SettingsContext.jsx
