[package]
name = "valorant-strategy-overlay"
version = "0.1.0"
description = "Valorant Real-Time Strategy Evaluator Overlay"
authors = ["Your Name <your@email.com>"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
leptess = "0.14.0"
image = "0.24.0"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
